--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Configure service PEM_PUB
         run: echo '${{ secrets.PEM_PUB }}' >> config/pub.pem
       - name: Configure service proxy
-        run: mkdir proxy.container.d; mv proxy.conf proxy.container.d/proxy.conf
+        run: mkdir proxy.container.d; mv proxy.conf proxy.container.d/auth.conf
       - name: Make service directory
         run: ssh service@${{ matrix.host }} mkdir -p /home/service/.config/containers/systemd/auth
       - name: deploy service
