feat: not use pod

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - main
 
 jobs:
   deploy_ssh:
@@ -10,7 +11,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - host: 1.bj.aliyun.bonjour.zone
+          - host: ecs.bj.aliyun.bonjour.zone
             pubkey: AAAAC3NzaC1lZDI1NTE5AAAAIFij2QuvS/uuJh9/8DhMLPl50eTeWixEGEb9oHwBKjba
     steps:
       - name: Make ssh directory
@@ -40,6 +41,6 @@ jobs:
       - name: load service
         run: ssh service@${{ matrix.host }} systemctl --user daemon-reload
       - name: start service
-        run: ssh service@${{ matrix.host }} systemctl --user restart auth-volume auth
+        run: ssh service@${{ matrix.host }} systemctl --user restart auth
       - name: start service proxy
         run: ssh service@${{ matrix.host }} systemctl --user restart proxy
